Add Ziggylabs and Podverse.

--- a/astro/src/content/main/intro.mdx
+++ b/astro/src/content/main/intro.mdx
@@ -6,6 +6,7 @@ working on a new computing platform based on Large Language Models.
         
 ## Places I've worked
 
+* [Ziggylabs](https://ziggylabs.ai) - Founder
 * [Fixie.ai](https://fixie.ai) - Co-founder and Chief Architect
 * [OctoML](https://octoml.ai) - SVP of Engineering
 * [Apple](https://www.apple.com) - Machine Intelligence team
