--- a/astro/src/content/main/intro.mdx
+++ b/astro/src/content/main/intro.mdx
@@ -6,6 +6,8 @@ working on a new computing platform based on Large Language Models.
         
 ## Places I've worked
 
+* [Aryn.ai](https://aryn.ai) - Chief Architect
+* [Trillium Academy](https://trilliumacademy.org) - Volunteer high-school CS teacher
 * [Ziggylabs](https://ziggylabs.ai) - Founder
 * [Fixie.ai](https://fixie.ai) - Co-founder and Chief Architect
 * [OctoML](https://octoml.ai) - SVP of Engineering
