--- a/astro/src/content/main/intro.mdx
+++ b/astro/src/content/main/intro.mdx
@@ -1,8 +1,9 @@
 ---
 ---
 
-Hi there! I'm Matt, I'm an AI startup founder, based in Seattle,
-working on a new computing platform based on Large Language Models.
+Hi there! I'm Matt. I'm an AI and systems builder, researcher,
+entrepreneur, educator, and dad. I'm based in Seattle.
+I'm working on a new computing platform based on Large Language Models.
         
 ## Places I've worked
 
