--- a/astro/src/content/main/intro.mdx
+++ b/astro/src/content/main/intro.mdx
@@ -7,6 +7,7 @@ I'm working on a new computing platform based on Large Language Models.
         
 ## Places I've worked
 
+* [Palantir](https://palantir.com) - Head of AI Systems
 * [Aryn.ai](https://aryn.ai) - Chief Architect
 * [Trillium Academy](https://trilliumacademy.org) - Volunteer high-school CS teacher
 * [Ziggylabs](https://ziggylabs.ai) - Founder
